--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 
     <div id='header'>
         <h1>ANTERZZ</h1>
+        <ul>
+          <li>
+            My Projects
+          </li>
+          <li>
+            My Social Networks
+          </li>
+        </ul>
     </div>
 
     <table class=center>
