--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div id='header'>
         <h1>ANTERZZ</h1>
         <ul>
-          <li>
-            My projects
+          <li><a href='index.html'>
+            My projects</a>
           </li>
-          <li>
-            My Social Networks
+          <li><a href='networks.html'>
+            My Social Networks</a>
           </li>
         </ul>
     </div>
