--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 <body>
 
     <div id='header'>
-        <h1>ANTERZZ</h1>
-        <ul>
-          <li><a href='index.html'>
+        <div id='1'>
+            <h1>ANTERZZ</h1>
+        </div>
+        <div id='2'>
+            <ul>
+                <li><a href='index.html'>
             My projects</a>
-          </li>
-          <li><a href='networks.html'>
+                </li>
+                <li><a href='networks.html'>
             My Social Networks</a>
-          </li>
-        </ul>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <table class=center>
@@ -59,8 +63,7 @@
     </table>
 
     <div id='footer'><iframe height="80px" width="300px" frameborder="0" src="https://akshatmittal.com/youtube-realtime/embed/#!/anterzzgaming" style="border: 0; width:300px; height:80px; background-color: #E8E8E8;"></iframe>
-        <
-    </div>
+        < </div>
 
 </body>
 
