--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 
     <div id='header'>
-        <div id='1'>
+        <div id='one'>
             <h1>ANTERZZ</h1>
         </div>
-        <div id='2'>
+        <div id='two'>
             <ul>
                 <li><a href='index.html'>
             My projects</a>
