Mise en page correcte
2 pages différentes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="stylesheet.css" rel="stylesheet" type="text/css" />
     <title>AnTerZz's Webpage</title>
     <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
 </head>
 
 <body>
@@ -24,6 +25,7 @@
             </ul>
         </div>
     </div>
+    <h2>My Projects</h2>
 
     <table class=center>
         <tr>
