--- a/index.html
+++ b/index.html
@@ -64,8 +64,28 @@
         </tr>
     </table>
 
-    <div id='footer'><iframe height="80px" width="300px" frameborder="0" src="https://akshatmittal.com/youtube-realtime/embed/#!/anterzzgaming" style="border: 0; width:300px; height:80px; background-color: #E8E8E8;"></iframe>
-        < </div>
+    <div id='footer'>
+        <div id='footerdiv'>
+            <div id='fone'>
+              <img class='yt' src='yt.png'/>
+            </div>
+            <div id='ftwo'>
+              <h3>/ANTERZZ</h3>
+            </div>
+            <div id='fthree'>
+              <img class='twitter' src='twitter.png'/>
+            </div>
+            <div id='ffour'>
+              <h3>/ANTERZZ</h3>
+            </div>
+            <div id='ffive'>
+              <img class='skype' src='skype.png'/>
+            </div>
+            <div id='fsix'>
+              <h3>/ANTOINE.RIEUNEAU1</h3>
+            </div>
+        </div>
+    </div>
 
 </body>
 
