--- a/index.html
+++ b/index.html
@@ -65,25 +65,7 @@
     </table>
 
     <div id='footer'>
-        <div id='footerdiv'>
-            <div id='fone'>
-              <img class='yt' src='yt.png'/>
-            </div>
-            <div id='ftwo'>
-              <h3>/ANTERZZ</h3>
-            </div>
-            <div id='fthree'>
-              <img class='twitter' src='twitter.png'/>
-            </div>
-            <div id='ffour'>
-              <h3>/ANTERZZ</h3>
-            </div>
-            <div id='ffive'>
-              <img class='skype' src='skype.png'/>
-            </div>
-            <div id='fsix'>
-              <h3>/ANTOINE.RIEUNEAU1</h3>
-            </div>
+        <img id='fimg' src='footer.png'/>
         </div>
     </div>
 
