Img changed and links

--- a/index.html
+++ b/index.html
@@ -31,34 +31,34 @@
         <tr>
             <td>
                 <a href=''>
-                    <div class='noir'><img class='imgt' src='http://img.youtube.com/vi/kZpmRDXtymw/maxresdefault.jpg' /></div>
+                    <div class='noir'><a href='https://www.youtube.com/user/AnTerZZGaming'></a><img class='imgt' src='http://img.youtube.com/vi/kZpmRDXtymw/maxresdefault.jpg' /></a></div>
                 </a>
             </td>
             <td>
                 <a href=''>
-                    <div class='noir'><img class='imgt' src='http://img.youtube.com/vi/kZpmRDXtymw/maxresdefault.jpg' /></div>
+                    <div class='noir'><a href='https://github.com/AnTerZz'><img class='imgt' src='github.png' /></a></div>
                 </a>
             </td>
             <td>
                 <a href=''>
-                    <div class='noir'><img class='imgt' src='http://img.youtube.com/vi/kZpmRDXtymw/maxresdefault.jpg' /></div>
+                    <div class='noir'><a href='#'><img class='imgt' src='http://placehold.it/1920x1080' /></a></div>
                 </a>
             </td>
         </tr>
         <tr>
             <td>
                 <a href=''>
-                    <div class='noir'><img class='imgt' src='http://img.youtube.com/vi/kZpmRDXtymw/maxresdefault.jpg' /></div>
+                    <div class='noir'><a href='#'><img class='imgt' src='http://placehold.it/1920x1080' /></a></div>
                 </a>
             </td>
             <td>
                 <a href=''>
-                    <div class='noir'><img class='imgt' src='http://img.youtube.com/vi/kZpmRDXtymw/maxresdefault.jpg' /></div>
+                    <div class='noir'><a href='#'><img class='imgt' src='http://placehold.it/1920x1080' /></a></div>
                 </a>
             </td>
             <td>
                 <a href=''>
-                    <div class='noir'><img class='imgt' src='http://img.youtube.com/vi/kZpmRDXtymw/maxresdefault.jpg' /></div>
+                    <div class='noir'><a href='#'><img class='imgt' src='http://placehold.it/1920x1080' /></a></div>
                 </a>
             </td>
         </tr>
