--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <tr>
             <td>
                 <a href=''>
-                    <div class='noir'><a href='https://www.youtube.com/user/AnTerZZGaming'></a><img class='imgt' src='http://img.youtube.com/vi/kZpmRDXtymw/maxresdefault.jpg' /></a></div>
+                    <div class='noir'><a href='https://www.youtube.com/user/AnTerZZGaming'><img class='imgt' src='http://img.youtube.com/vi/kZpmRDXtymw/maxresdefault.jpg' /></a></div>
                 </a>
             </td>
             <td>
