--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </div>
         <div id='two'>
             <ul>
-                <li><a href='index.html'>
+                <li><a href='index.html' style='text-decoration:underline; color:rgb(255,200,0);'>
             My projects</a>
                 </li>
-                <li><a href='networks.html'>
-            My Social Networks</a>
+                <li><a href='about.html'>
+            About Me</a>
                 </li>
             </ul>
         </div>
@@ -41,7 +41,7 @@
             </td>
             <td>
                 <a href=''>
-                    <div class='noir'><a href='#'><img class='imgt' src='http://placehold.it/1920x1080' /></a></div>
+                    <div class='noir'><a href='http://oppidanspillar.fr/'><img class='imgt' src='op.png' /></a></div>
                 </a>
             </td>
         </tr>
